--- a/client/src/components/Login/Login.css
+++ b/client/src/components/Login/Login.css
@@ -1,3 +1,8 @@
+.form-back {
+  background-image: url("images/background.jpg");
+}
+
+/* ///////////////// */
 :root {
   --blue: #007bff;
   --indigo: #6610f2;
@@ -10629,28 +10634,6 @@ a.text-dark:focus {
   }
 }
 
-body {
-  font-family: "Lato", Arial, sans-serif;
-  font-size: 16px;
-  line-height: 1.8;
-  font-weight: normal;
-  color: gray;
-  position: relative;
-  z-index: 0;
-  padding: 0;
-}
-body:after {
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  content: "";
-  background: #000;
-  opacity: 0.3;
-  z-index: -1;
-}
-
 a {
   -webkit-transition: 0.3s all ease;
   -o-transition: 0.3s all ease;
@@ -10902,4 +10885,8 @@ textarea.form-control {
   color: red;
   text-align: center;
   margin-top: 10px;
+}
+.form-controls {
+  width: 70%;
+  border-radius: 15px;
 }
