--- a/client/src/components/Forms/AddMemberForm.css
+++ b/client/src/components/Forms/AddMemberForm.css
@@ -11,7 +11,7 @@
 }
 
 .add-member-form {
-  background: white;
+  background: #ffffffee;
   padding: 20px 50px;
   border-radius: 8px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
