--- a/client/src/components/Forms/EditMemberForm.css
+++ b/client/src/components/Forms/EditMemberForm.css
@@ -1,83 +1,90 @@
-/* EditMemberForm.css */
-
 .edit-member-overlay {
   position: fixed;
   top: 0;
+  left: 0;
   right: 0;
-  width: 100%;
-  height: 100%;
+  bottom: 0;
   background: rgba(0, 0, 0, 0.5);
   display: flex;
-  justify-content: flex-end;
   align-items: center;
-  box-sizing: border-box;
+  justify-content: center;
 }
 
 .edit-member-form {
   background: #ffffffee;
+  padding: 20px 50px;
   border-radius: 8px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-  padding: 20px;
-  width: 400px;
-  height: 85%;
-  max-width: 80%;
+  max-width: 800px;
+  width: 100%;
 }
 
-.edit-member-form #editmbr-title {
-  margin-top: 0;
-  font-size: 1.5rem;
-  color: #333;
-  border-bottom: 1px solid #ddd;
-  font-weight: 600;
-  padding-bottom: 10px;
-  z-index: 1000;
+.form-row {
+  display: flex;
+  gap: 20px;
 }
 
-.edit-member-form-label {
-  display: block;
+.form-group {
+  flex: 1;
   margin-bottom: 15px;
 }
 
-.edit-member-form label {
-  display: flex;
-  flex-direction: column;
+.form-group label {
+  display: block;
   font-weight: bold;
-  margin-bottom: 10px;
+  margin-bottom: 5px;
 }
 
-.edit-member-form input,
-.edit-member-form select {
+.form-group input,
+.form-group select {
   width: 100%;
-  padding: 8px;
-  border: 1px solid #ddd;
-  border-radius: 5%/40%;
-  margin-bottom: 8px;
-  margin-top: 5px;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 9%/60%;
+  box-sizing: border-box;
 }
 
-.edit-member-form-buttons {
+.form-group input.valid,
+.form-group select.valid {
+  border-color: #28a745;
+}
+
+.form-group input.invalid,
+.form-group select.invalid {
+  border-color: #dc3545;
+}
+
+.btn-holder {
   display: flex;
-  justify-content: space-between;
-  margin-top: 15px;
+  justify-content: center;
+  gap: 10px;
 }
 
-.edit-member-close-btn {
-  background: none;
-  border: 1px solid #ddd;
-  color: #333;
-  padding: 8px 16px;
-  border-radius: 4px;
-  cursor: pointer;
-}
-
-.edit-member-save-btn {
-  background-color: #007bff;
+.btn-submit {
+  background: #28a745;
   color: white;
+  padding: 10px 20px;
   border: none;
-  padding: 8px 16px;
   border-radius: 4px;
   cursor: pointer;
+  transition: background 0.3s ease;
+  border-radius: 18%/65%;
 }
-.sm-btn-edit {
-  border-radius: 15%/50%;
+
+.btn-submit:hover {
+  background: #218838;
+}
+
+.btn-cancel {
+  background: #dc3545;
+  color: white;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: background 0.3s ease;
+}
+
+.btn-cancel:hover {
+  background: #c82333;
 }
