--- a/client/src/components/Sidebar/Sidebar.scss
+++ b/client/src/components/Sidebar/Sidebar.scss
@@ -5,7 +5,7 @@
   height: 100%;
   width: 220px;
   background-color: #191c25ef;
-  /* background-color: #1a2036; */
+  // /* background-color: #1a2036; */  ******(2ND  e:/myfile:/vishnu/work/Radiance) ****************************
   color: white;
   box-sizing: border-box;
   border-top-right-radius: 2%;
