--- a/client/src/components/Loader/Loading.scss
+++ b/client/src/components/Loader/Loading.scss
@@ -7,8 +7,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  z-index: 9999; /* Make sure it appears above all other content */
-  background: rgba(255, 255, 255, 0.9); /* Semi-transparent white background */
+  z-index: 9999;
+  background: rgba(255, 255, 255, 0.9);
 }
 
 .loading-container::before {
@@ -20,24 +20,24 @@
   height: 100%;
   background: url("/images/background.jpg") no-repeat center center fixed;
   background-size: cover;
-  filter: blur(8px); /* Apply the blur effect to the background */
-  z-index: -1; /* Ensure the background is behind the loading content */
+  filter: blur(8px);
+  z-index: -1;
 }
 
 .loading-content {
   position: relative;
-  z-index: 1; /* Ensure content is above the blurred background */
+  z-index: 1;
   text-align: center;
 }
 
 .loading-image {
-  width: 100px; /* Adjust the size of the image */
+  width: 100px;
   height: auto;
-  margin-bottom: 20px; /* Space between image and text */
+  margin-bottom: 20px;
 }
 
 .loading-text {
   font-size: 1.5rem;
-  color: #333; /* Darker text color for contrast */
+  color: #333;
   font-weight: bold;
 }
