--- a/client/src/components/Calendar/Calendar.scss
+++ b/client/src/components/Calendar/Calendar.scss
@@ -125,12 +125,12 @@
 //   color: white;
 //   border-radius: 5px;
 //   padding: 2px 4px; /* Reduced padding */
-//   font-size: 0.75rem; /* Smaller font size */
+//   font-size: 0.75rem; 
 //   text-align: center;
 //   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.15);
-//   overflow: hidden; /* Hide overflow text if necessary */
-//   white-space: nowrap; /* Prevent text wrapping */
-//   text-overflow: ellipsis; /* Add ellipsis for overflowing text */
+//   overflow: hidden; 
+//   white-space: nowrap; 
+//   text-overflow: ellipsis; 
 // }
 .custom-day {
   display: flex;
