--- a/client/src/components/Attendance/Attendance.scss
+++ b/client/src/components/Attendance/Attendance.scss
@@ -13,7 +13,7 @@ html {
   align-items: center;
   height: 100vh;
   width: 100vw;
-  background-image: url("your-background-image-url.jpg"); /* Replace with your image URL */
+  background-image: url("your-background-image-url.jpg");
   background-size: cover;
   background-position: center;
 }
