--- a/client/src/components/Loader/Loading.scss
+++ b/client/src/components/Loader/Loading.scss
@@ -8,7 +8,7 @@
   justify-content: center;
   align-items: center;
   z-index: 9999;
-  background: rgba(255, 255, 255, 0.9);
+  background: rgba(236, 234, 234, 0.521);
 }
 
 .loading-container::before {
@@ -18,7 +18,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background: url("/images/background.jpg") no-repeat center center fixed;
+  // background: url("/images/background.jpg") no-repeat center center fixed;
   background-size: cover;
   filter: blur(8px);
   z-index: -1;
