--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -42,6 +42,8 @@ body {
   padding: 2% 3%;
   background-color: transparent;
   color: black;
+  // background-image: url("images/display-background.jpg");
+  // background-size: cover;
 }
 
 .content-title {
